// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`standard-pagination-component default snapshot with first/prev/next/last 1`] = `
<standard-pagination-component>
  <ul aria-disabled="false" aria-label="Pagination" class="b-pagination flex-fill50 justify-content-center pagination" role="menubar">
    <li aria-hidden="false" class="page-item" role="presentation">
      <button aria-controls="pagination" aria-label="Go to first page" class="page-link" role="menuitem" tabindex="0" type="button">
        First
      </button>
    </li>
    <li aria-hidden="false" class="page-item" role="presentation">
      <button aria-controls="pagination" aria-label="Go to previous page" class="page-link" role="menuitem" tabindex="0" type="button">
        Prev
      </button>
    </li>
    <li class="page-item" role="presentation">
      <button aria-checked="false" aria-controls="pagination" aria-label="Go to page 1" class="page-link" role="menuitemradio" tabindex="0" type="button">
        1
      </button>
    </li>
    <li class="page-item" role="presentation">
      <button aria-checked="false" aria-controls="pagination" aria-label="Go to page 2" class="page-link" role="menuitemradio" tabindex="0" type="button">
        2
      </button>
    </li>
    <li class="active page-item" role="presentation">
      <button aria-checked="true" aria-controls="pagination" aria-label="Go to page 3" class="page-link" disabled="" role="menuitemradio" tabindex="-1" type="button">
        3
      </button>
    </li>
    <li class="page-item" role="presentation">
      <button aria-checked="false" aria-controls="pagination" aria-label="Go to page 4" class="page-link" role="menuitemradio" tabindex="0" type="button">
        4
      </button>
    </li>
    <li class="page-item" role="presentation">
      <button aria-checked="false" aria-controls="pagination" aria-label="Go to page 5" class="page-link" role="menuitemradio" tabindex="0" type="button">
        5
      </button>
    </li>
    <li class="bv-d-xs-down-none disabled page-item" role="separator">
      <span class="page-link">
        ...
      </span>
    </li>
    <li class="page-item" role="presentation">
      <button aria-checked="false" aria-controls="pagination" aria-label="Go to page 9" class="page-link" role="menuitemradio" tabindex="0" type="button">
        9
      </button>
    </li>
    <li aria-hidden="false" class="page-item" role="presentation">
      <button aria-controls="pagination" aria-label="Go to next page" class="page-link" role="menuitem" tabindex="0" type="button">
        Next
      </button>
    </li>
    <li aria-hidden="false" class="page-item" role="presentation">
      <button aria-controls="pagination" aria-label="Go to last page" class="page-link" role="menuitem" tabindex="0" type="button">
        Last
      </button>
    </li>
  </ul>
</standard-pagination-component>
`;

exports[`standard-pagination-component hideGotoEndButtons removes nav edges 1`] = `
<standard-pagination-component>
  <ul aria-disabled="false" aria-label="Pagination" class="b-pagination pagination" role="menubar">
    <li class="page-item" role="presentation">
      <button aria-checked="false" aria-controls="pagination" aria-label="Go to page 1" class="page-link" role="menuitemradio" tabindex="0" type="button">
        1
      </button>
    </li>
    <li class="active page-item" role="presentation">
      <button aria-checked="true" aria-controls="pagination" aria-label="Go to page 2" class="page-link" disabled="" role="menuitemradio" tabindex="-1" type="button">
        2
      </button>
    </li>
    <li class="page-item" role="presentation">
      <button aria-checked="false" aria-controls="pagination" aria-label="Go to page 3" class="page-link" role="menuitemradio" tabindex="0" type="button">
        3
      </button>
    </li>
    <li class="bv-d-xs-down-none disabled page-item" role="separator">
      <span class="page-link">
        ...
      </span>
    </li>
    <li class="page-item" role="presentation">
      <button aria-checked="false" aria-controls="pagination" aria-label="Go to page 5" class="page-link" role="menuitemradio" tabindex="0" type="button">
        5
      </button>
    </li>
  </ul>
</standard-pagination-component>
`;
